[package]
authors = ["Angel Campbell"]
description = "An immutable class implementation of the LexoRank ranking system by Atlassian JIRA"
edition = "2021"
keywords = ["rank", "jira"]
license-file = "LICENSE"
name = "lexorank"
repository = "https://github.com/Kayron013/lexorank-rust"
version = "2.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
regex = "1.5"
substring = "1.4"
